@@ -1,83 +1,112 @@
-// Your sbt build file. Guides on how to write one can be found at
-// http://www.scala-sbt.org/0.13/docs/index.html
+import ReleaseTransformations.*
+import sbt.Credentials
+import sbt.Keys.credentials
 
-import ReleaseTransformations._
-
-val sparkVer = sys.props.getOrElse("spark.version", "2.4.0")
-val sparkBranch = sparkVer.substring(0, 3)
-val defaultScalaVer = sparkBranch match {
-  case "2.3" => "2.11.8"
-  case "2.4" => "2.11.8"
+lazy val sparkVer = sys.props.getOrElse("spark.version", "3.5.4")
+lazy val sparkBranch = sparkVer.substring(0, 3)
+lazy val defaultScalaVer = sparkBranch match {
+  case "3.5" => "2.12.18"
+  case "3.4" => "2.12.17"
+  case "3.3" => "2.12.15"
   case _ => throw new IllegalArgumentException(s"Unsupported Spark version: $sparkVer.")
 }
-val scalaVer = sys.props.getOrElse("scala.version", defaultScalaVer)
-val defaultScalaTestVer = scalaVer match {
-  case s if s.startsWith("2.10") => "2.0"
-  case s if s.startsWith("2.11") => "2.2.6" // scalatest_2.11 does not have 2.0 published
+lazy val scalaVer = sys.props.getOrElse("scala.version", defaultScalaVer)
+lazy val defaultScalaTestVer = scalaVer match {
+  case s if s.startsWith("2.12") || s.startsWith("2.13") => "3.0.8"
 }
 
-sparkVersion := sparkVer
+ThisBuild / version := {
+  val baseVersion = (ThisBuild / version).value
+  s"${baseVersion}-spark${sparkBranch}"
+}
 
-scalaVersion := scalaVer
+ThisBuild / scalaVersion := scalaVer
+ThisBuild / organization := "org.graphframes"
+ThisBuild / crossScalaVersions := Seq("2.12.18", "2.13.8")
 
-name := "graphframes"
+lazy val commonSetting = Seq(
+  libraryDependencies ++= Seq(
+    "org.apache.spark" %% "spark-graphx" % sparkVer % "provided" cross CrossVersion.for3Use2_13,
+    "org.apache.spark" %% "spark-sql" % sparkVer % "provided" cross CrossVersion.for3Use2_13,
+    "org.apache.spark" %% "spark-mllib" % sparkVer % "provided" cross CrossVersion.for3Use2_13,
+    "org.slf4j" % "slf4j-api" % "2.0.16",
+    "org.scalatest" %% "scalatest" % defaultScalaTestVer % Test,
+    "com.github.zafarkhaja" % "java-semver" % "0.10.2" % Test),
+  credentials += Credentials(Path.userHome / ".ivy2" / ".sbtcredentials"),
+  licenses := Seq("Apache-2.0" -> url("https://opensource.org/licenses/Apache-2.0")),
+  Compile / scalacOptions ++= Seq("-deprecation", "-feature"),
+  Compile / doc / scalacOptions ++= Seq(
+    "-groups",
+    "-implicits",
+    "-skip-packages",
+    Seq("org.apache.spark").mkString(":")),
+  Test / doc / scalacOptions ++= Seq("-groups", "-implicits"),
 
-spName := "graphframes/graphframes"
+  // Test settings
+  Test / fork := true,
+  Test / parallelExecution := false,
+  Test / javaOptions ++= Seq(
+    "-XX:+IgnoreUnrecognizedVMOptions",
+    "-Xmx2048m",
+    "-XX:ReservedCodeCacheSize=384m",
+    "-XX:MaxMetaspaceSize=384m",
+    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.nio=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED"),
+  credentials += Credentials(Path.userHome / ".ivy2" / ".sbtcredentials"))
 
-organization := "org.graphframes"
+lazy val root = (project in file("."))
+  .settings(
+    commonSetting,
+    name := "graphframes",
+    Compile / scalacOptions ++= Seq("-deprecation", "-feature"),
 
-version := (version in ThisBuild).value + s"-spark$sparkBranch"
+    // Global settings
+    Global / concurrentRestrictions := Seq(Tags.limitAll(1)),
+    autoAPIMappings := true,
+    coverageHighlighting := false,
 
-isSnapshot := version.value.contains("SNAPSHOT")
+    // Release settings
+    releaseProcess := Seq[ReleaseStep](
+      inquireVersions,
+      setReleaseVersion,
+      commitReleaseVersion,
+      tagRelease,
+      setNextVersion,
+      commitNextVersion),
 
-// All Spark Packages need a license
-licenses := Seq("Apache-2.0" -> url("http://opensource.org/licenses/Apache-2.0"))
+    // Assembly settings
+    assembly / test := {}, // No tests in assembly
+    assembly / assemblyMergeStrategy := {
+      case PathList("META-INF", xs @ _*) => MergeStrategy.discard
+      case x if x.endsWith("module-info.class") => MergeStrategy.discard
+      case x =>
+        val oldStrategy = (assembly / assemblyMergeStrategy).value
+        oldStrategy(x)
+    })
 
-spAppendScalaVersion := true
+lazy val connect = (project in file("graphframes-connect"))
+  .dependsOn(root)
+  .settings(
+    commonSetting,
+    name := "graphframes-connect",
+    Compile / PB.targets := Seq(PB.gens.java -> (Compile / sourceManaged).value),
+    Compile / PB.includePaths ++= Seq(file("src/main/protobuf")),
+    PB.protocVersion := "3.23.4", // Spark 3.5 branch
+    libraryDependencies ++= Seq(
+      "org.apache.spark" %% "spark-connect" % sparkVer % "provided" cross CrossVersion.for3Use2_13),
 
-// Add Spark components this package depends on, e.g, "mllib", ....
-sparkComponents ++= Seq("graphx", "sql", "mllib")
-
-// uncomment and change the value below to change the directory where your zip artifact will be created
-// spDistDirectory := target.value
-
-// add any Spark Package dependencies using spDependencies.
-// e.g. spDependencies += "databricks/spark-avro:0.1"
-
-libraryDependencies += "org.slf4j" % "slf4j-api" % "1.7.16"
-
-libraryDependencies += "org.scalatest" %% "scalatest" % defaultScalaTestVer % "test"
-
-libraryDependencies += "com.github.zafarkhaja" % "java-semver" % "0.9.0" % "test" // MIT license
-
-parallelExecution := false
-
-scalacOptions in (Compile, doc) ++= Seq(
-  "-groups",
-  "-implicits",
-  "-skip-packages", Seq("org.apache.spark").mkString(":"))
-
-scalacOptions in (Test, doc) ++= Seq("-groups", "-implicits")
-
-// This fixes a class loader problem with scala.Tuple2 class, scala-2.11, Spark 2.x
-fork in Test := true
-
-// This and the next line fix a problem with forked run: https://github.com/scalatest/scalatest/issues/770
-javaOptions in Test ++= Seq("-Xmx2048m", "-XX:ReservedCodeCacheSize=384m", "-XX:MaxPermSize=384m")
-
-concurrentRestrictions in Global := Seq(
-  Tags.limitAll(1))
-
-autoAPIMappings := true
-
-coverageHighlighting := false
-
-// We only use sbt-release to update version numbers.
-releaseProcess := Seq[ReleaseStep](
-  inquireVersions,
-  setReleaseVersion,
-  commitReleaseVersion,
-  tagRelease,
-  setNextVersion,
-  commitNextVersion
-)
+    // Assembly and shading
+    assembly / test := {},
+    assembly / assemblyShadeRules := Seq(
+      ShadeRule.rename("com.google.protobuf.**" -> "org.sparkproject.connect.protobuf.@1").inAll),
+    assembly / assemblyMergeStrategy := {
+      case PathList("META-INF", xs @ _*) => MergeStrategy.discard
+      case x if x.endsWith("module-info.class") => MergeStrategy.discard
+      case x =>
+        val oldStrategy = (assembly / assemblyMergeStrategy).value
+        oldStrategy(x)
+    }
+  )
